                          WebAuth Change History

WebAuth 3.6.0 (unreleased)

 *) Add the WebKdcLocalRealms configuration option to mod_webkdc, which
    specifies the transformation behavior for authenticated identities.
    The default is "local", which runs krb5_aname_to_localname and uses
    the result as the authenticated identity (matching previous behavior).
    Setting it to "none" always keeps the fully-qualified Kerberos
    principal as the authenticated identity, and setting it to a list of
    realms strips the realm if it matches one of the listed realms and
    uses the fully-qualified Kerberos principal otherwise.

    Thanks to Dmitri Priimak for the patch.

 *) Add the WebKdcPermittedRealms configuration option to mod_webkdc.  If
    set, only Kerberos principals in the listed realms will be able to
    obtain authentication tokens from the WebKDC.  This allows sites with
    Kerberos cross-realm trust to prevent users in foreign realms from
    obtaining WebAuth credentials that satisfy "require valid-user".

    Thanks to Dmitri Priimak for the patch.

 *) Add an additional check to webkdcProxyTokenRequest processing in
    mod_webkdc to ensure that the Kerberos authenticator and the included
    Kerberos TGT are for the same principal.

 *) The WebLogin login.tmpl template may be called with err_rejected set
    if the authenticating principal is rejected by the WebKDC.  Login
    templates should be modified to handle this variable.

 *) Add a new error to the WebKDC protocol, 18, indicating that the WebKDC
    did not permit that user to authenticate.  This error is returned when
    WebKdcPermittedRealms is set and the realm of the authenticating
    principal isn't included.  Add support for the new error in the
    WebLogin code, setting the template variable err_rejected.  Based on
    work by Dmitri Priimak.

 *) libwebauth provides a new webauth_krb5_get_realm function, which